--- a/src/components/tjanster/_tjanster.scss
+++ b/src/components/tjanster/_tjanster.scss
@@ -1,39 +1,38 @@
 @import '@/scss/_main.scss';
 
-.hem {
+.tjanster {
     display: grid;
     grid-template-columns: repeat(8, 12.5%);
 
     .item1 {
-        grid-area: 1 / 1 / span 1 / span 8;
+        grid-area: 1 / 1 / span 1 / span 4;
         margin: 2rem 0;
         padding: 2rem;
-        height: 40vw;
-        background-color: $lightgray;
+        height: 30vw;
+        background-color: $lightbeige;
     }
     .item2 {
-        grid-area: 2 / 1 / span 1 / span 4;
+        grid-area: 1 / 5 / span 1 / span 4;
         margin: 2rem 0;
         padding: 2rem;
-        height: 40vw;
-        background-color: $gray;
+        height: 30vw;
+        background-color: $darkbeige;
     }
     .item3 {
-        grid-area: 2 / 5 / span 1 / span 4;
+        grid-area: 2 / 1 / span 1 / span 4;
         margin: 2rem 0;
-        background-color: $beige;
 
         img {
-            height: 100%;
-            height: 40vw;
+            width: 100%;
+            height: 30vw;
             object-fit: cover;
         }
     }
     .item4 {
-        grid-area: 3 / 1 / span 1 / span 8;
+        grid-area: 2 / 5 / span 1 / span 4;
         margin: 2rem 0;
-        background-color: $darkgray;
-        height: 40vw;
+        background-color: $beige;
+        height: 30vw;
         padding: 2rem;
     }
 }
