feat: added component "VarforRefine"

--- a/src/components/om_mig/_ommig.scss
+++ b/src/components/om_mig/_ommig.scss
@@ -31,7 +31,7 @@
     .item4 {
         grid-area: 2 / 5 / span 1 / span 4;
         margin: 2rem 0;
-        background-color: $darkbeige;
+        background-color: $darkgray;
         height: 30vw;
         padding: 2rem;
     }
