--- a/src/components/varfor_refine/_varforrefine.scss
+++ b/src/components/varfor_refine/_varforrefine.scss
@@ -1,15 +1,15 @@
 @import '@/scss/_main.scss';
 
-.pall_smartness {
+.varfor_refine {
     display: grid;
     grid-template-columns: repeat(8, 12.5%);
 
     .item1 {
         grid-area: 1 / 1 / span 1 / span 4;
         margin: 2rem 0;
-        
+       
         img {
-            height: 100%;
+            width: 100%;
             height: 30vw;
             object-fit: cover;
         }
@@ -19,23 +19,20 @@
         margin: 2rem 0;
         padding: 2rem;
         height: 30vw;
-        background-color: $darkgray;
+        background-color: $beige;
     }
     .item3 {
         grid-area: 2 / 1 / span 1 / span 4;
         margin: 2rem 0;
-        height: 30vw;
         padding: 2rem;
-        background-color: $lightgray;
+        height: 30vw;
+        background-color: $lightbeige;
     }
     .item4 {
         grid-area: 2 / 5 / span 1 / span 4;
         margin: 2rem 0;
-
-        img {
-            width: 100%;
-            height: 30vw;
-            object-fit: cover;
-        }
+        background-color: $darkbeige;
+        height: 30vw;
+        padding: 2rem;
     }
 }
