--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -1,13 +1,13 @@
 @import 'variables';
 .btn {
-    background-color: $lightbeige;
-    padding: 0.5rem 2rem;
+    background-color: $darkbeige;
+    padding: 0.8rem 2rem;
     margin: 0.5rem 0;
     border-radius: 0.2rem;
 }
 .input1 {
     background-color: $white;
-    padding: 0.5rem 2rem;
+    padding: 0.8rem 2rem;
     margin: 0.5rem 0;
     border-radius: 0.2rem;
     border: none;
