--- a/src/components/kontakt/_kontakt.scss
+++ b/src/components/kontakt/_kontakt.scss
@@ -1,36 +1,38 @@
 @import '@/scss/_main.scss';
 
 .kontakt {
-    display: grid;
-    grid-template-columns: repeat(8, 12.5%);
-
-    form {
-        grid-area: 1 / 3 / span 1 / span 4;
+    .grid {
         display: grid;
         grid-template-columns: repeat(8, 12.5%);
-        background-color: $darkbeige;
-        padding: 4rem;
-        margin: 2rem 0;
-        border-radius: 0.2rem;
 
-        #item1 {
-            grid-area: 1 / 1 / span 1 / span 8;
-            
-        }
-        #item2 {
-            grid-area: 2 / 1 / span 1 / span 8;
-            
-        }
-        #item3 {
-            grid-area: 3 / 1 / span 1 / span 8;
-            
-        }
-        #item4 {
-            grid-area: 4 / 1 / span 1 / span 8;
-            
-        }
-        .btn {
-            grid-area: 5 / 1 / span 1 / span 8;
+        form {
+            grid-area: 1 / 3 / span 1 / span 4;
+            display: grid;
+            grid-template-columns: repeat(8, 12.5%);
+            background-color: $lightbeige;
+            padding: 4rem;
+            margin: 2rem 0;
+            border-radius: 0.2rem;
+
+            #item1 {
+                grid-area: 1 / 1 / span 1 / span 8;
+                
+            }
+            #item2 {
+                grid-area: 2 / 1 / span 1 / span 8;
+                
+            }
+            #item3 {
+                grid-area: 3 / 1 / span 1 / span 8;
+                
+            }
+            #item4 {
+                grid-area: 4 / 1 / span 1 / span 8;
+                
+            }
+            .btn {
+                grid-area: 5 / 1 / span 1 / span 8;
+            }
         }
     }
 }
