--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,6 +5,6 @@ $lightgray: #eeeeee;
 $lightbeige: #f5f5ec;
 $beige: #eae7dd;
 $darkbeige: #d6d3c9;
-$footer: #bababa;
+$footer: #646464;
 $black: #000000;
 
