--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -5,11 +5,12 @@ footer {
         display: grid;
         grid-template-columns: repeat(8, 12.5%);
         background-color: $footer;
-        margin: 2rem 0 0 0;
-        padding: 1.5rem 0 1rem 0;
+        margin: 0.25rem 0 0 0;
+        padding: 0.5rem 0 0 0;
 
         .item1 {
-            grid-area: 1 / 1 / span 1 / span 3;
+            grid-area: 1 / 1 / span 1 / span 8;
+            margin: 0 0 0.5rem 0;
 
             p {
                 font-size: 0.8rem;
@@ -19,8 +20,50 @@ footer {
         .item2 {
             grid-area: 1 / 4 / span 1 / span 2;
             img {
-                width: 5vw;
+                width: 100%;
+                height: 7vw;
                 object-fit: cover;
+            }
+        }
+        .item3 {
+            grid-area: 2 / 1 / span 1 / span 8;
+        
+            .instagram {
+                height: 100%;
+                width: 12vw;
+                object-fit: cover;
+            }
+            .facebook {
+                height: 100%;
+                width: 12vw;
+                object-fit: cover;
+            }
+            .linkedin {
+                height: 100%;
+                width: 12vw;
+                object-fit: cover;
+            }
+        }
+    }
+}
+@media (min-width: 770px) {
+    footer {
+    .grid {
+        margin: 1rem 0 0 0;
+        padding: 1.5rem 0 1rem 0;
+        .item1 {
+            grid-area: 1 / 1 / span 1 / span 3;
+
+            p {
+                font-size: 0.8rem;
+                margin: 0.3rem;
+                color: $white;
+            }
+        }
+        .item2 {
+            grid-area: 1 / 4 / span 1 / span 2;
+            img {
+                
             }
         }
         .item3 {
@@ -28,17 +71,14 @@ footer {
         
             .instagram {
                 width: 6vw;
-                object-fit: cover;
             }
             .facebook {
                 width: 6vw;
-                object-fit: cover;
             }
             .linkedin {
                 width: 6vw;
-                object-fit: cover;
-                margin: 0 0.3rem;
             }
         }
     }
+}
 }
