--- a/src/components/kontakt/_kontakt.scss
+++ b/src/components/kontakt/_kontakt.scss
@@ -6,12 +6,12 @@
         grid-template-columns: repeat(8, 12.5%);
 
         form {
-            grid-area: 1 / 3 / span 1 / span 4;
+            grid-area: 1 / 2 / span 1 / span 6;
             display: grid;
             grid-template-columns: repeat(8, 12.5%);
-            background-color: $lightbeige;
-            padding: 4rem;
-            margin: 2rem 0;
+            background-color: $footer;
+            padding: 2rem;
+            margin: 4rem 0;
             border-radius: 0.2rem;
 
             #item1 {
@@ -32,6 +32,17 @@
             }
             .btn {
                 grid-area: 5 / 1 / span 1 / span 8;
+            }
+        }
+    }
+}
+@media (min-width: 770px) {
+    .kontakt {
+        .grid {
+            form {
+                grid-area: 1 / 3 / span 1 / span 4;
+                padding: 4rem;
+                margin: 2rem 0;
             }
         }
     }
