--- a/src/components/pall_smartness/_pallsmartness.scss
+++ b/src/components/pall_smartness/_pallsmartness.scss
@@ -7,36 +7,71 @@
 
         .item1 {
             grid-area: 1 / 1 / span 1 / span 8;
-            margin: 2rem 0;
+            margin: 0.25rem 0;
             
             img {
                 height: 100%;
-                height: 30vw;
+                height: 50vw;
                 object-fit: cover;
             }
         }
         .item2 {
             grid-area: 2 / 1 / span 1 / span 8;
-            margin: 2rem 0;
+            margin: 0.25rem 0;
             padding: 2rem;
-            height: 30vw;
+            height: 50vw;
             background-color: $darkgray;
         }
         .item3 {
             grid-area: 3 / 1 / span 1 / span 8;
-            margin: 2rem 0;
-            height: 30vw;
+            margin: 0.25rem 0;
             padding: 2rem;
+            height: 50vw;
+            padding: 0.5rem;
             background-color: $lightgray;
         }
         .item4 {
             grid-area: 4 / 1 / span 1 / span 8;
-            margin: 2rem 0;
+            margin: 0.25rem 0;
 
             img {
                 width: 100%;
-                height: 30vw;
+                height: 50vw;
                 object-fit: cover;
+            }
+        }
+    }
+}
+@media (min-width: 770px) {
+    .pall_smartness {
+        .grid {
+            .item1 {
+                grid-area: 1 / 1 / span 1 / span 4;
+                margin: 2rem 0;
+
+                img {
+                    height: 30vw;
+                }
+            }
+            .item2 {
+                grid-area: 1 / 5 / span 1 / span 4;
+                margin: 2rem 0;
+                padding: 4rem 2rem;
+                height: 30vw;
+            }
+            .item3 {
+                grid-area: 2 / 1 / span 1 / span 4;
+                margin: 2rem 0;
+                padding: 4rem 2rem;
+                height: 30vw;
+            }
+            .item4 {
+                grid-area: 2 / 5 / span 1 / span 4;
+                margin: 2rem 0;
+               
+                img {
+                    height: 30vw;
+                }
             }
         }
     }
