--- a/src/components/varfor_refine/_varforrefine.scss
+++ b/src/components/varfor_refine/_varforrefine.scss
@@ -7,34 +7,67 @@
 
         .item1 {
             grid-area: 1 / 1 / span 1 / span 8;
-            margin: 2rem 0;
+            margin: 0;
         
             img {
+                opacity: 0.7;
                 width: 100%;
-                height: 30vw;
+                height: 50vw;
                 object-fit: cover;
             }
         }
         .item2 {
             grid-area: 2 / 1 / span 1 / span 8;
-            margin: 2rem 0;
-            padding: 2rem;
-            height: 30vw;
+            margin: 0.25rem 0;
+            padding: 0.5rem;
+            height: 50vw;
             background-color: $beige;
         }
         .item3 {
             grid-area: 3 / 1 / span 1 / span 8;
-            margin: 2rem 0;
-            padding: 2rem;
-            height: 30vw;
+            margin: 0.25rem 0;
+            padding: 0.5rem;
+            height: 50vw;
             background-color: $lightbeige;
         }
         .item4 {
             grid-area: 4 / 1 / span 1 / span 8;
-            margin: 2rem 0;
+            margin: 0.25rem 0;
             background-color: $darkbeige;
-            height: 30vw;
-            padding: 2rem;
+            height: 50vw;
+            padding: 0.5rem;
+        }
+    }
+}
+@media (min-width: 770px) {
+    .varfor_refine {
+        .grid {
+            .item1 {
+                grid-area: 1 / 1 / span 1 / span 4;
+                margin: 2rem 0;
+
+                img {
+                    height: 30vw;
+                }
+            }
+            .item2 {
+                grid-area: 1 / 5 / span 1 / span 4;
+                margin: 2rem 0;
+                padding: 4rem 2rem;
+                height: 30vw;
+            }
+            .item3 {
+                grid-area: 2 / 1 / span 1 / span 4;
+                margin: 2rem 0;
+                padding: 4rem 2rem;
+                height: 30vw;
+            }
+            .item4 {
+                grid-area: 2 / 5 / span 1 / span 4;
+                margin: 2rem 0;
+                padding: 4rem 2rem;
+                height: 30vw;
+            }
         }
     }
 }
