--- a/src/components/hem/_hem.scss
+++ b/src/components/hem/_hem.scss
@@ -35,7 +35,7 @@
             margin: 0.25rem 0;
             height: 50vw;
             padding: 2rem;
-            background-color: $darkbeige;
+            background-color: $lightgreen;
         }
         .item5 {
             grid-area: 5 / 1 / span 1 / span 8;
