--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,6 +5,8 @@ $lightgray: #eeeeee;
 $lightbeige: #f5f5ec;
 $beige: #eae7dd;
 $darkbeige: #d6d3c9;
+$lightgreen: #eaf0ed;
+$green: #cdd3d0;
 $footer: #646464;
 $black: #000000;
 
