--- a/src/components/varfor_refine/_varforrefine.scss
+++ b/src/components/varfor_refine/_varforrefine.scss
@@ -7,7 +7,7 @@
 
         .item1 {
             grid-area: 1 / 1 / span 1 / span 8;
-            margin: 0;
+            margin: 0 0 -0.25rem 0;
         
             img {
                 opacity: 0.75;
@@ -18,22 +18,22 @@
         }
         .item2 {
             grid-area: 2 / 1 / span 1 / span 8;
-            margin: 0.25rem 0;
+            margin: 0;
             padding: 0.5rem;
             height: 50vw;
-            background-color: $beige;
+            background-color: $whitebeige;
         }
         .item3 {
             grid-area: 3 / 1 / span 1 / span 8;
-            margin: 0.25rem 0;
+            margin: 0;
             padding: 0.5rem;
             height: 50vw;
             background-color: $lightbeige;
         }
         .item4 {
             grid-area: 4 / 1 / span 1 / span 8;
-            margin: 0.25rem 0;
-            background-color: $darkbeige;
+            margin: 0;
+            background-color: $beige;
             height: 50vw;
             padding: 0.5rem;
         }
@@ -44,7 +44,7 @@
         .grid {
             .item1 {
                 grid-area: 1 / 1 / span 1 / span 4;
-                margin: 2rem 0;
+                margin: 0 0 1rem 0;
 
                 img {
                     height: 30vw;
@@ -52,19 +52,19 @@
             }
             .item2 {
                 grid-area: 1 / 5 / span 1 / span 4;
-                margin: 2rem 0;
+                margin: 0 0 1rem 0;
                 padding: 4rem 2rem;
                 height: 30vw;
             }
             .item3 {
                 grid-area: 2 / 1 / span 1 / span 4;
-                margin: 2rem 0;
+                margin: 1rem 0 2rem 0;
                 padding: 4rem 2rem;
                 height: 30vw;
             }
             .item4 {
                 grid-area: 2 / 5 / span 1 / span 4;
-                margin: 2rem 0;
+                margin: 1rem 0 2rem 0;
                 padding: 4rem 2rem;
                 height: 30vw;
             }
