--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,11 +2,12 @@ $white: #ffffff;
 $darkgray: #d8d7d7;
 $gray: #e6e6e6;
 $lightgray: #eeeeee;
+$whitebeige: #fbfbf2;
 $lightbeige: #f5f5ec;
 $beige: #eae7dd;
-$darkbeige: #d6d3c9;
-$lightgreen: #eaf0ed;
-$green: #cdd3d0;
+$darkbeige: #747370;
+$lightgreen: #f4fbf7;
+$green: #eaf0ed;
 $footer: #646464;
 $black: #000000;
 
