--- a/src/components/blogg/_blogg.scss
+++ b/src/components/blogg/_blogg.scss
@@ -1,20 +1,44 @@
 @import '@/scss/_main.scss';
 
 .blogg {
-    background-color: $green;
-    padding: 2rem 0;
+    display: grid;
+    grid-template-columns: repeat(8, 12.5%);
 
-    h1 {
-        margin: 2rem 0;
+    .item1 {
+        height: 50vw;
+        margin: 0;
+        padding: 2rem;
+        background-color: $lightbeige;
+        grid-area: 1 / 1 / span 1 / span 8;
     }
-    p {
-        margin: 2rem 0;
+    .item2 {
+        grid-area: 2 / 1 / span 1 / span 8;
+        margin: 0 0 -0.25rem 0;
+
+        img{
+            height: 50vw;
+            width: 100%;
+            object-fit: cover;
+            opacity: 0.75;
+        }
     }
-    img {
-        margin: 2rem 0;
-        width: 50vw;
-        height: 100%;
-        object-fit: cover;
-        opacity: 0.75;
+}
+@media (min-width: 770px) {
+    .blogg {
+        .item1 {
+            grid-area: 1 / 1 / span 1 / span 4;
+            margin: 1rem 0;
+            padding: 2rem;
+            height: 30vw;
+        }
+        .item2 {
+            grid-area: 1 / 5 / span 1 / span 4;
+            margin: 1rem 0;
+
+            img {
+                height: 30vw;
+                
+            }
+        }
     }
 }
