--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -5,7 +5,7 @@ footer {
         display: grid;
         grid-template-columns: repeat(8, 12.5%);
         background-color: $footer;
-        margin: 0.25rem 0 0 0;
+        margin: 0;
         padding: 0.5rem 0 0 0;
 
         .item1 {
@@ -49,8 +49,8 @@ footer {
 @media (min-width: 770px) {
     footer {
     .grid {
-        margin: 1rem 0 0 0;
         padding: 1.5rem 0 1rem 0;
+        
         .item1 {
             grid-area: 1 / 1 / span 1 / span 3;
 
