--- a/src/components/hem/_hem.scss
+++ b/src/components/hem/_hem.scss
@@ -7,7 +7,7 @@
 
         .item1 {
             grid-area: 1 / 1 / span 1 / span 8;
-            margin: 0;
+            margin: 0 0 -0.25rem 0;
 
             img {
                 width: 100%;
@@ -18,28 +18,35 @@
         }
         .item2 {
             grid-area: 2 / 1 / span 1 / span 8;
-            margin: 0.25rem 0;
-            background-color: $beige;
+            margin: 0;
+            background-color: $lightbeige;
             padding: 4rem 2rem;
             height: 50vw;
         }
         .item3 {
             grid-area: 3 / 1 / span 1 / span 8;
-            margin: 0.25rem 0;
-            background-color: $lightbeige;
+            margin: 0;
+            background-color: $lightgreen;
             height: 50vw;
             padding: 0.5rem;
         }
         .item4 {
             grid-area: 4 / 1 / span 1 / span 8;
-            margin: 0.25rem 0;
-            height: 50vw;
-            padding: 2rem;
-            background-color: $lightgreen;
+            margin: 0;
+            background-color: $green;
+
+            img {
+                width: 100%;
+                height: 50vw;
+                object-fit: cover;
+                opacity: 0.6;
+            }
         }
         .item5 {
             grid-area: 5 / 1 / span 1 / span 8;
-            margin: 0.25rem 0;
+            margin: 0;
+            background-color: $whitebeige;
+            
             img {
                 height: 100%;
                 height: 50vw;
@@ -48,8 +55,8 @@
         }
         .item6 {
             grid-area: 6 / 1 / span 1 / span 8;
-            margin: 0.25rem 0;
-            background-color: $darkbeige;
+            margin: 0;
+            background-color: $lightbeige;
             height: 50vw;
             padding: 0.5rem;
         }
@@ -81,20 +88,22 @@
             .item4 {
                 grid-area: 2 / 5 / span 1 / span 4;
                 margin: 1rem 0;
-                padding: 2rem;
-                height: 30vw;
+
+                img {
+                    height: 29vw;
+                }
             }
             .item5 {
                 grid-area: 3 / 1 / span 1 / span 4;
-                margin: 1rem 0;
+                margin: 1rem 0 2rem 0;
                
                 img {
-                    height: 30vw;
+                    height: 29vw;
                 }
             }
             .item6 {
                 grid-area: 3 / 5 / span 1 / span 4;
-                margin: 1rem 0;
+                margin: 1rem 0 2rem 0;
                 padding: 2rem;
                 height: 30vw;
             }
