--- a/src/components/kontakt/_kontakt.scss
+++ b/src/components/kontakt/_kontakt.scss
@@ -1,48 +1,90 @@
 @import '@/scss/_main.scss';
 
 .kontakt {
+    display: grid;
+    grid-template-columns: repeat(8, 12.5%);
+    background-color: $whitebeige;
+
     .grid {
         display: grid;
         grid-template-columns: repeat(8, 12.5%);
+        padding: 3rem;
+        margin: 1rem;
+        border-radius: 0.2rem;
+        background-color: $footer;
+        grid-area: 1 / 2 / span 1 / span 6;
+        color: $white;
 
-        form {
-            grid-area: 1 / 2 / span 1 / span 6;
-            display: grid;
-            grid-template-columns: repeat(8, 12.5%);
-            background-color: $footer;
-            padding: 2rem;
-            margin: 4rem 0;
+        #item1 {
+            grid-area: 1 / 1 / span 1 / span 8;
+            margin: 0.3rem;
+        }
+        #item2 {
+            grid-area: 2 / 1 / span 1 / span 8;
+        }
+        #item3 {
+            grid-area: 3 / 1 / span 1 / span 8;
+            margin: 0.3rem;
+        }
+        #item4 {
+            grid-area: 4 / 1 / span 1 / span 8;
+        }
+        #item5 {
+            grid-area: 5 / 1 / span 1 / span 8;
+            margin: 0.3rem;
+        }
+        #item6 {
+            grid-area: 6 / 1 / span 1 / span 8;
+        }
+        #item7 {
+            grid-area: 7 / 1 / span 1 / span 8;
+            margin: 0.3rem 0;
+            padding: 0.8rem 0;
             border-radius: 0.2rem;
-
-            #item1 {
-                grid-area: 1 / 1 / span 1 / span 8;
-                
-            }
-            #item2 {
-                grid-area: 2 / 1 / span 1 / span 8;
-                
-            }
-            #item3 {
-                grid-area: 3 / 1 / span 1 / span 8;
-                
-            }
-            #item4 {
-                grid-area: 4 / 1 / span 1 / span 8;
-                
-            }
-            .btn {
-                grid-area: 5 / 1 / span 1 / span 8;
-            }
+            border: none;
+            background-color: $beige;
         }
     }
 }
 @media (min-width: 770px) {
     .kontakt {
+        padding: 1rem 6rem;
+
         .grid {
-            form {
-                grid-area: 1 / 3 / span 1 / span 4;
-                padding: 4rem;
-                margin: 2rem 0;
+            padding: 3rem 1rem;
+            margin: 2rem 0;
+
+            #item1 {
+                grid-area: 1 / 2 / span 1 / span 1;
+                margin: 0.3rem 0;
+                text-align: left;
+            }
+            #item2 {
+                grid-area: 2 / 2 / span 1 / span 6;
+            }
+            #item3 {
+                grid-area: 3 / 2 / span 1 / span 1;
+                margin: 0.3rem 0;
+                text-align: left;
+            }
+            #item4 {
+                grid-area: 4 / 2 / span 1 / span 6;
+            }
+            #item5 {
+                grid-area: 5 / 2 / span 1 / span 1;
+                margin: 0.3rem 0;
+                text-align: left;
+            }
+            #item6 {
+                grid-area: 6 / 2 / span 1 / span 6;
+            }
+            #item7 {
+                grid-area: 7 / 2 / span 1 / span 6;
+                margin: 2rem 0 0.3rem 0;
+                padding: 0.8rem 0;
+                border-radius: 0.2rem;
+                border: none;
+                background-color: $darkbeige;
             }
         }
     }
