feat: created a contact form

--- a/src/components/blogg/_blogg.scss
+++ b/src/components/blogg/_blogg.scss
@@ -8,7 +8,7 @@
         height: 50vw;
         margin: 0;
         padding: 2rem;
-        background-color: $lightbeige;
+        background-color: $gray;
         grid-area: 1 / 1 / span 1 / span 8;
     }
     .item2 {
