--- a/src/components/varfor_refine/_varforrefine.scss
+++ b/src/components/varfor_refine/_varforrefine.scss
@@ -21,7 +21,7 @@
             margin: 0;
             padding: 0.5rem;
             height: 50vw;
-            background-color: $whitebeige;
+            background-color: $beige;
         }
         .item3 {
             grid-area: 3 / 1 / span 1 / span 8;
@@ -33,7 +33,7 @@
         .item4 {
             grid-area: 4 / 1 / span 1 / span 8;
             margin: 0;
-            background-color: $beige;
+            background-color: $blue;
             height: 50vw;
             padding: 0.5rem;
         }
