--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -4,7 +4,7 @@ footer {
     .grid {
         display: grid;
         grid-template-columns: repeat(8, 12.5%);
-        background-color: $footer;
+        background-color: #292A30;
         margin: 0;
         padding: 0.5rem 0 0 0;
 
