--- a/src/components/hem/_hem.scss
+++ b/src/components/hem/_hem.scss
@@ -19,21 +19,21 @@
         .item2 {
             grid-area: 2 / 1 / span 1 / span 8;
             margin: 0;
-            background-color: $lightbeige;
+            background-color: $gray;
             padding: 4rem 2rem;
             height: 50vw;
         }
         .item3 {
             grid-area: 3 / 1 / span 1 / span 8;
             margin: 0;
-            background-color: $lightgreen;
+            background-color: $blue;
             height: 50vw;
             padding: 0.5rem;
         }
         .item4 {
             grid-area: 4 / 1 / span 1 / span 8;
             margin: 0;
-            background-color: $green;
+            background-color: $beige;
 
             img {
                 width: 100%;
@@ -45,7 +45,7 @@
         .item5 {
             grid-area: 5 / 1 / span 1 / span 8;
             margin: 0;
-            background-color: $whitebeige;
+            background-color: $beige;
             
             img {
                 height: 100%;
@@ -56,7 +56,7 @@
         .item6 {
             grid-area: 6 / 1 / span 1 / span 8;
             margin: 0;
-            background-color: $lightbeige;
+            background-color: $green;
             height: 50vw;
             padding: 0.5rem;
         }
