--- a/src/components/om_mig/_ommig.scss
+++ b/src/components/om_mig/_ommig.scss
@@ -21,14 +21,14 @@
             margin: 0;
             padding: 0.5rem;
             height: 50vw;
-            background-color: $whitebeige;
+            background-color: $gray;
         }
         .item3 {
             grid-area: 3 / 1 / span 1 / span 8;
             margin: 0;
             padding: 0.5rem;
             height: 50vw;
-            background-color: $lightbeige;
+            background-color: $blue;
         }
         .item4 {
             grid-area: 4 / 1 / span 1 / span 8;
