--- a/src/components/tjanster/_tjanster.scss
+++ b/src/components/tjanster/_tjanster.scss
@@ -10,14 +10,14 @@
             margin: 0;
             padding: 2rem;
             height: 50vw;
-            background-color: $whitebeige;
+            background-color: $green;
         }
         .item2 {
             grid-area: 2 / 1 / span 1 / span 8;
             margin: 0;
             padding: 2rem;
             height: 50vw;
-            background-color: $lightbeige;
+            background-color: $beige;
         }
         .item3 {
             grid-area: 3 / 1 / span 1 / span 8;
@@ -33,7 +33,7 @@
             grid-area: 4 / 1 / span 1 / span 8;
             margin: 0;
             padding: 2rem;
-            background-color: $beige;
+            background-color: $gray;
             height: 50vw;
         }
     }
