--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,13 +1,16 @@
 $white: #ffffff;
 $darkgray: #d8d7d7;
-$gray: #e6e6e6;
+$gray: #f2f2f2;
 $lightgray: #eeeeee;
 $whitebeige: #fbfbf2;
 $lightbeige: #f5f5ec;
-$beige: #eae7dd;
+$beige: #f5f5f5;
 $darkbeige: #747370;
 $lightgreen: #f4fbf7;
 $green: #eaf0ed;
-$footer: #646464;
+$footer: #292A30;
 $black: #000000;
+$blue: #d2ddd7;
+$green: #e3efed;
+
 
