--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,7 +5,7 @@ $lightgray: #eeeeee;
 $whitebeige: #fbfbf2;
 $lightbeige: #f5f5ec;
 $beige: #f5f5f5;
-$darkbeige: #747370;
+$darkbeige: #e3e1e1;
 $lightgreen: #f4fbf7;
 $green: #eaf0ed;
 $footer: #292A30;
