--- a/src/components/blogg/_blogg.scss
+++ b/src/components/blogg/_blogg.scss
@@ -4,19 +4,37 @@
     display: grid;
     grid-template-columns: repeat(8, 12.5%);
 
-    .item1 {
-        height: 50vw;
-        margin: 0;
-        padding: 2rem;
-        background-color: $gray;
+    .item0 {
         grid-area: 1 / 1 / span 1 / span 8;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: left;
+        margin: 0;
+        padding: 0.5rem;
+        height: 60vw;
+        background-color: $blue;
+    }
+
+    .item1 {
+        grid-area: 2 / 1 / span 1 / span 8;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: center;
+        align-items: center;
+        margin: 0 0 1rem 0;
+        padding: 1.5rem;
+        height: 15rem;
+        background-color: $gray;
+        
     }
     .item2 {
-        grid-area: 2 / 1 / span 1 / span 8;
+        grid-area: 3 / 1 / span 1 / span 8;
         margin: 0 0 -0.25rem 0;
 
         img{
-            height: 50vw;
+            height: 15rem;
             width: 100%;
             object-fit: cover;
             opacity: 0.75;
@@ -25,18 +43,23 @@
 }
 @media (min-width: 770px) {
     .blogg {
+        .item0 {
+            margin: 1rem 0 2rem 0;
+            padding: 2rem 4rem;
+            height: 25vw;
+        }
         .item1 {
             grid-area: 1 / 1 / span 1 / span 4;
             margin: 1rem 0;
             padding: 2rem;
-            height: 30vw;
+            height: 20rem;
         }
         .item2 {
             grid-area: 1 / 5 / span 1 / span 4;
             margin: 1rem 0;
 
             img {
-                height: 30vw;
+                height: 20rem;
                 
             }
         }
