--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -3,10 +3,11 @@
 footer {
     .grid {
         display: grid;
-        grid-template-columns: repeat(8, 12.5%);
+        grid-template-columns: repeat(8, auto);
         background-color: #292A30;
         margin: 0;
         padding: 0.5rem 0 0 0;
+        color: $white;
 
         .item1 {
             grid-area: 1 / 1 / span 1 / span 8;
@@ -17,30 +18,23 @@ footer {
                 margin: 0.3rem;
             }
         }
-        .item2 {
-            grid-area: 1 / 4 / span 1 / span 2;
-            img {
-                width: 100%;
-                height: 7vw;
-                object-fit: cover;
-            }
-        }
+        
         .item3 {
-            grid-area: 2 / 1 / span 1 / span 8;
+            grid-area: 2 / 5 / span 1 / span 2;
         
             .instagram {
                 height: 100%;
-                width: 12vw;
+                width: 3rem;
                 object-fit: cover;
             }
             .facebook {
                 height: 100%;
-                width: 12vw;
+                width: 3rem;
                 object-fit: cover;
             }
             .linkedin {
                 height: 100%;
-                width: 12vw;
+                width: 3rem;
                 object-fit: cover;
             }
         }
@@ -52,7 +46,7 @@ footer {
         padding: 1.5rem 0 1rem 0;
         
         .item1 {
-            grid-area: 1 / 1 / span 1 / span 3;
+            grid-area: 1 / 2 / span 1 / span 3;
 
             p {
                 font-size: 0.8rem;
@@ -61,16 +55,16 @@ footer {
             }
         }
         .item3 {
-            grid-area: 1 / 6 / span 1 / span 3;
+            grid-area: 1 / 8 / span 1 / span 1;
         
             .instagram {
-                width: 6vw;
+                width: 3rem;
             }
             .facebook {
-                width: 6vw;
+                width: 3rem;
             }
             .linkedin {
-                width: 6vw;
+                width: 3rem;
             }
         }
     }
