--- a/src/components/kontakt/_kontakt.scss
+++ b/src/components/kontakt/_kontakt.scss
@@ -4,41 +4,48 @@
     display: grid;
     grid-template-columns: repeat(8, 12.5%);
     background-color: $blue;
+    padding: 3rem 1rem;
 
     .grid {
         display: grid;
         grid-template-columns: repeat(8, 12.5%);
-        padding: 3rem;
+        padding: 2rem;
         margin: 1rem;
         border-radius: 0.2rem;
         background-color: #535561;
-        grid-area: 1 / 2 / span 1 / span 6;
+        grid-area: 1 / 1 / span 8 / span 8;
         color: $white;
 
         #item1 {
             grid-area: 1 / 1 / span 1 / span 8;
-            margin: 0.3rem;
+           
         }
         #item2 {
             grid-area: 2 / 1 / span 1 / span 8;
+            margin: 0.3rem;
         }
         #item3 {
             grid-area: 3 / 1 / span 1 / span 8;
-            margin: 0.3rem;
+           
         }
         #item4 {
             grid-area: 4 / 1 / span 1 / span 8;
+            margin: 0.3rem;
         }
         #item5 {
             grid-area: 5 / 1 / span 1 / span 8;
-            margin: 0.3rem;
+            
         }
         #item6 {
             grid-area: 6 / 1 / span 1 / span 8;
+            margin: 0.3rem;
         }
         #item7 {
             grid-area: 7 / 1 / span 1 / span 8;
-            margin: 0.3rem 0;
+        }
+        #item8 {
+            grid-area: 8 / 1 / span 1 / span 8;
+            margin: 2rem 0 0 0;
             padding: 0.8rem 0;
             border-radius: 0.2rem;
             border: none;
@@ -50,38 +57,45 @@
 }
 @media (min-width: 770px) {
     .kontakt {
-        padding: 1rem 12rem;
+        padding: 1rem;
 
         .grid {
-            padding: 1.5rem 2.5rem;
+            padding: 2rem 3rem;
             margin: 2rem 0;
+            grid-area: 1 / 3 / span 7 / span 4;
 
             #item1 {
-                grid-area: 1 / 1 / span 1 / span 1;
-                margin: 0.3rem 0;
-                text-align: left;
+                grid-area: 1 / 1 / span 1 / span 8;
+               
             }
             #item2 {
-                grid-area: 2 / 1 / span 1 / span 8;
-            }
-            #item3 {
-                grid-area: 3 / 1 / span 1 / span 1;
+                grid-area: 2 / 1 / span 1 / span 1;
                 margin: 0.3rem 0;
                 text-align: left;
             }
+            #item3 {
+                grid-area: 3 / 1 / span 1 / span 8;
+                
+            }
             #item4 {
-                grid-area: 4 / 1 / span 1 / span 8;
+                grid-area: 4 / 1 / span 1 / span 1;
+                margin: 0.3rem 0;
+                text-align: left;
             }
             #item5 {
                 grid-area: 5 / 1 / span 1 / span 8;
+                
+            }
+            #item6 {
+                grid-area: 6 / 1 / span 1 / span 1;
                 margin: 0.3rem 0;
                 text-align: left;
             }
-            #item6 {
-                grid-area: 6 / 1 / span 1 / span 8;
-            }
             #item7 {
                 grid-area: 7 / 1 / span 1 / span 8;
+            }
+            #item8 {
+                grid-area: 8 / 1 / span 1 / span 8;
                 margin: 2rem 0 0.3rem 0;
                 padding: 0.8rem 0;
                 border-radius: 0.2rem;
