--- a/src/components/om_mig/_ommig.scss
+++ b/src/components/om_mig/_ommig.scss
@@ -7,35 +7,38 @@
 
         .item1 {
             grid-area: 1 / 1 / span 1 / span 8;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            justify-content: left;
+            vertical-align: middle;
+            margin: 0;
+            padding: 0.5rem;
+            height: 80vw;
+            background-color: $blue;
+        }
+        .item3 {
+            grid-area: 2 / 1 / span 1 / span 8;
             margin: 0 0 -0.25rem 0;
         
             img {
                 width: 100%;
-                height: 50vw;
+                height: 60vw;
                 object-fit: cover;
                 opacity: 0.75;
             }
         }
-        .item2 {
-            grid-area: 2 / 1 / span 1 / span 8;
-            margin: 0;
-            padding: 0.5rem;
-            height: 50vw;
-            background-color: $gray;
-        }
-        .item3 {
-            grid-area: 3 / 1 / span 1 / span 8;
-            margin: 0;
-            padding: 0.5rem;
-            height: 50vw;
-            background-color: $blue;
-        }
         .item4 {
-            grid-area: 4 / 1 / span 1 / span 8;
+            grid-area: 3 / 1 / span 1 / span 8;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            justify-content: center;
+            align-items: center;
             margin: 0;
-            background-color: $beige;
-            height: 50vw;
             padding: 0.5rem;
+            height: 100vw;
+            background-color: $gray;
         }
     }
 }
@@ -43,30 +46,23 @@
     .om_mig {
         .grid {
             .item1 {
-                grid-area: 1 / 1 / span 1 / span 4;
-                margin: 0 0 1rem 0;
-
-                img {
-                    height: 30vw;
-                }
-            }
-            .item2 {
-                grid-area: 1 / 5 / span 1 / span 4;
-                margin: 0 0 1rem 0;
-                padding: 1rem;
-                height: 30vw;
+                margin: 1rem 0 2rem 0;
+                padding: 2rem 4rem;
+                height: 15rem;
             }
             .item3 {
                 grid-area: 2 / 1 / span 1 / span 4;
-                margin: 1rem 0 2rem 0;
-                padding: 2rem;
-                height: 30vw;
+                margin: 0 0 1rem 0;
+
+                img {
+                    height: 20rem;
+                }
             }
             .item4 {
                 grid-area: 2 / 5 / span 1 / span 4;
-                margin: 1rem 0 2rem 0;
-                padding: 2rem;
-                height: 30vw;
+                margin: 0 0 1rem 0;
+                padding: 1.5rem;
+                height: 20rem;
             }
         }
     }
