--- a/src/components/tjanster/_tjanster.scss
+++ b/src/components/tjanster/_tjanster.scss
@@ -7,34 +7,37 @@
 
         .item1 {
             grid-area: 1 / 1 / span 1 / span 8;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            justify-content: left;
+            vertical-align: middle;
             margin: 0;
             padding: 2rem;
-            height: 50vw;
+            height: 15rem;
             background-color: $green;
         }
-        .item2 {
-            grid-area: 2 / 1 / span 1 / span 8;
-            margin: 0;
-            padding: 2rem;
-            height: 50vw;
-            background-color: $beige;
-        }
         .item3 {
-            grid-area: 3 / 1 / span 1 / span 8;
+            grid-area: 2 / 1 / span 1 / span 8;
             margin: 0 0 -0.25rem 0;
 
             img {
                 width: 100%;
-                height: 50vw;
+                height: 15rem;
                 object-fit: cover;
             }
         }
         .item4 {
-            grid-area: 4 / 1 / span 1 / span 8;
+            grid-area: 3 / 1 / span 1 / span 8;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            justify-content: center;
+            align-items: center;
             margin: 0;
             padding: 2rem;
             background-color: $gray;
-            height: 50vw;
+            height: 15rem;
         }
     }
 }
@@ -42,30 +45,23 @@
     .tjanster {
         .grid {
             .item1 {
-                grid-area: 1 / 1 / span 1 / span 4;
-                margin: 0 0 1rem 0;
-                padding: 4rem 2rem;
-                height: 30vw;
-            }
-            .item2 {
-                grid-area: 1 / 5 / span 1 / span 4;
-                margin: 0 0 1rem 0;
-                padding: 4rem 2rem;
-                height: 30vw;
+                margin: 1rem 0 2rem 0;
+                padding: 2rem 4rem;
+                height: 15rem;
             }
             .item3 {
                 grid-area: 2 / 1 / span 1 / span 4;
                 margin: 1rem 0 2rem 0;
 
                 img {
-                    height: 30vw;
+                    height: 20rem;
                 }
             }
             .item4 {
                 grid-area: 2 / 5 / span 1 / span 4;
                 margin: 1rem 0 2rem 0;
-                padding: 4rem 2rem;
-                height: 30vw;
+                padding: 1.5rem;
+                height: 20rem;
             }
         }
     }
