--- a/src/components/varfor_refine/_varforrefine.scss
+++ b/src/components/varfor_refine/_varforrefine.scss
@@ -7,66 +7,62 @@
 
         .item1 {
             grid-area: 1 / 1 / span 1 / span 8;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            justify-content: left;
+            vertical-align: middle;
+            margin: 0;
+            padding: 0.5rem;
+            height: 100vw;
+            background-color: $darkbeige;
+        }
+        .item2 {
+            grid-area: 2 / 1 / span 1 / span 8;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+            padding: 0.5rem;
+            height: 100vw;
+            background-color: $lightbeige;
+        }
+        .item3 {
+            grid-area: 3 / 1 / span 1 / span 8;
             margin: 0 0 -0.25rem 0;
         
             img {
                 opacity: 0.75;
                 width: 100%;
-                height: 50vw;
+                height: 60vw;
                 object-fit: cover;
             }
-        }
-        .item2 {
-            grid-area: 2 / 1 / span 1 / span 8;
-            margin: 0;
-            padding: 0.5rem;
-            height: 50vw;
-            background-color: $beige;
-        }
-        .item3 {
-            grid-area: 3 / 1 / span 1 / span 8;
-            margin: 0;
-            padding: 0.5rem;
-            height: 50vw;
-            background-color: $lightbeige;
-        }
-        .item4 {
-            grid-area: 4 / 1 / span 1 / span 8;
-            margin: 0;
-            background-color: $blue;
-            height: 50vw;
-            padding: 0.5rem;
         }
     }
 }
 @media (min-width: 770px) {
     .varfor_refine {
-        .grid {
+        .grid { 
             .item1 {
-                grid-area: 1 / 1 / span 1 / span 4;
+                margin: 1rem 0 2rem 0;
+                padding: 2rem 4rem;
+                height: 15rem;
+            }
+            .item2 {
+                grid-area: 2 / 1 / span 1 / span 4;
+                margin: 0 0 1rem 0;
+                padding: 1.5rem;
+                height: 20rem;
+            }
+            .item3 {
+                grid-area: 2 / 5 / span 1 / span 4;
                 margin: 0 0 1rem 0;
 
                 img {
-                    height: 30vw;
+                    height: 20rem;
                 }
-            }
-            .item2 {
-                grid-area: 1 / 5 / span 1 / span 4;
-                margin: 0 0 1rem 0;
-                padding: 4rem 2rem;
-                height: 30vw;
-            }
-            .item3 {
-                grid-area: 2 / 1 / span 1 / span 4;
-                margin: 1rem 0 2rem 0;
-                padding: 4rem 2rem;
-                height: 30vw;
-            }
-            .item4 {
-                grid-area: 2 / 5 / span 1 / span 4;
-                margin: 1rem 0 2rem 0;
-                padding: 4rem 2rem;
-                height: 30vw;
             }
         }
     }
