--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -14,7 +14,7 @@
 }
 .input2 {
     background-color: $white;
-    padding: 3rem 2rem;
+    padding: 1rem;
     margin: 0.5rem 0;
     border-radius: 0.2rem;
     border: none;
