--- a/src/components/tjanster/_tjanster.scss
+++ b/src/components/tjanster/_tjanster.scss
@@ -30,11 +30,11 @@
             }
             #item2 {
                 grid-area: 2 / 1 / span 1 / span 4;
-                margin: 1rem 0 2rem 0;
+                margin: 0 0 1rem 0;
             }
             #item3 {
                 grid-area: 2 / 5 / span 1 / span 4;
-                margin: 1rem 0 2rem 0;
+                margin: 0 0 2rem 0;
                 padding: 1.5rem;
             }
         }
