--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -3,9 +3,9 @@
 // Typography
 $font-family-h: 'Sintony', sans-serif;
 $font-family-p: 'Quicksand', sans-serif;
+
 a {
     text-decoration: none;
-    color: #000;
 }
 ul{
     margin: 0;
@@ -19,7 +19,6 @@ ul{
         text-align: center;
     }
 }
-
 h1 {
     font-size: 1.7rem;
     text-decoration: none;
@@ -28,7 +27,6 @@ h1 {
     padding: 0;
     font-family: $font-family-h;
 }
-
 h2 {
     font-size: 1.3rem;
     text-decoration: none;
@@ -46,7 +44,6 @@ h3 {
     padding: 0;
     font-family: $font-family-h;
 }
-
 h4 {
     font-size: 1.2rem;
     text-align: center;
@@ -54,7 +51,6 @@ h4 {
     padding: 0;
     font-family: $font-family-h;
 }
-
 h5 {
     font-size: 1rem;
     font-weight: 400;
@@ -64,7 +60,6 @@ h5 {
     padding: 0;
     font-family: $font-family-h;
 }
-
 p {
     font-size: 0.9rem;
     text-align: center;
@@ -73,65 +68,54 @@ p {
     padding: 0;
 }
 
-@media only screen and (min-width: 600px) {
-    /* for tablets */
+@media (min-width: 600px) {
+
+    h1 {
+        font-size: 1.8rem;
+        text-align: center;
+    }
+    h2 {
+        font-size: 1.4rem;
+        text-align: center;
     
-h1 {
-    font-size: 1.8rem;
-    text-align: center;
+    }
+    h3 {
+        font-size: 1.5rem;
+        text-align: center;
+    }
+
+    h4 {
+        font-size: 1.1rem;
+        text-align: center;
+    }
+    h5 {
+        font-size: 0.9rem;
+        text-align: center;
+    }
+    p {
+        font-size: 1.1rem; 
+        text-align: center;
+    } 
 }
 
-h2 {
-    font-size: 1.4rem;
-    text-align: center;
-   
-}
-
-h3 {
-    font-size: 1.5rem;
-    text-align: center;
-}
-
-h4 {
-    font-size: 1.1rem;
-    text-align: center;
-}
-
-h5 {
-    font-size: 0.9rem;
-    text-align: center;
-}
-p {
-    font-size: 1.1rem; 
-    text-align: center;
-}
-  
-}
-
-
-@media only screen and (min-width: 770px) {
-    /* For desktop: */
+@media (min-width: 770px) {
 
     h1 {
         font-size: 1.6rem;
         text-align: left;
     }
-    
     h2 {
         font-size: 1.3rem;
         text-align: left;
     }
-    
     h3 {
         font-size: 1.2rem;
         text-align: left;
     }
-    
     h4 {
         font-size: 1rem;
         text-align: left;
     }
-    
     h5 {
         font-size: 0.8rem;
         text-align: left;
@@ -140,5 +124,4 @@ p {
         font-size: 1rem; 
         text-align: left;
     }
-
 }
