--- a/src/components/kontakt/_kontakt.scss
+++ b/src/components/kontakt/_kontakt.scss
@@ -51,10 +51,10 @@
         #item8 {
             grid-area: 8 / 1 / span 1 / span 8;
             margin: 2rem 0 0 0;
-            padding: 0.8rem 0;
+            padding: 0.5rem 0;
             border-radius: 0.2rem;
             border: none;
-            background-color: $darkgray;
+            background-color: $darkbeige;
 
             h3 {
                 text-align: center;
