--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,7 +10,7 @@ $lightgreen: #f4fbf7;
 $green: #eaf0ed;
 $footer: #292A30;
 $black: #000000;
-$blue: #d2ddd7;
-$green: #e3efed;
+$blue: #d7dce1;
+$darkgreen: #dadfdc;
 
 
