--- a/src/components/hem/_hem.scss
+++ b/src/components/hem/_hem.scss
@@ -7,16 +7,19 @@
 
         #item0 {
             grid-area: 1 / 1 / span 1 / span 8;
-            background-color: $green;
+            background-color: $darkgreen;
         }
 
         #item1 {
             grid-area: 2 / 1 / span 1 / span 8;
             margin: 0 0 -0.25rem 0;
+            img {
+               height: 18rem;
+            }
         }
         #item2 {
             grid-area: 3 / 1 / span 1 / span 8;
-            background-color: $gray;
+            background-color: $darkbeige;
         }
         #item3 {
             grid-area: 5 / 1 / span 1 / span 8;
@@ -24,7 +27,7 @@
         }
         #item4 {
             grid-area: 4 / 1 / span 1 / span 8;
-            background-color: $beige;
+            background-color: $gray;
         }
         #item5 {
             grid-area: 6 / 1 / span 1 / span 8;
@@ -48,6 +51,9 @@
             #item1 {
                 grid-area: 2 / 1 / span 1 / span 4;
                 margin: 0 0 1rem 0;
+                img {
+                    height: 20rem;
+                 }
             }
             #item2 {
                 grid-area: 2 / 5 / span 1 / span 4;
