--- a/src/components/tjanster/_tjanster.scss
+++ b/src/components/tjanster/_tjanster.scss
@@ -7,7 +7,7 @@
 
         #item1 {
             grid-area: 1 / 1 / span 1 / span 8;
-            background-color: $green;
+            background-color: $darkgreen;
         }
         #item2 {
             grid-area: 2 / 1 / span 1 / span 8;
