--- a/src/components/varfor_refine/_varforrefine.scss
+++ b/src/components/varfor_refine/_varforrefine.scss
@@ -11,7 +11,7 @@
         }
         #item2 {
             grid-area: 3 / 1 / span 1 / span 8;
-            background-color: $lightbeige;
+            background-color: $gray;
         }
         #item3 {
             grid-area: 2 / 1 / span 1 / span 8;
