--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -6,6 +6,13 @@ $font-family-p: 'Quicksand', sans-serif;
 
 a {
     text-decoration: none;
+
+    &.router-link-exact-active {
+        color: #818181;
+      }
+    :visited {
+        color: black;
+    }
 }
 ul{
     margin: 0;
